--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1"
   },
